# rusty-cooperative-localization

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: constants.rs  main.rs  system.rs  utils.rs
src/data/: mod.rs  recorder.rs
src/filters/: ekf.rs  estimator.rs  mod.rs  ukf.rs
src/plotting/: mod.rs
src/system/: dynamics.rs  mod.rs  model.rs
