[package]
name = "rusty-cooperative-localization"
version = "0.1.0"
edition = "2021"
authors = ["Henry Dixon"]
description = "Rust implementation of UAV-UGV cooperative localization simulator (EKF vs UKF)"
license = "MIT"

[dependencies]
nalgebra = { version = "0.34.1", features = ["serde", "rand"] }
rand = "0.8"
rand_distr = "0.4"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }            # Config serialization
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
