[package]
name = "rusty-cooperative-localization"
version = "1.0.0"
edition = "2021"
authors = ["Henry Dixon"]
description = "Rust port of UAV-UGV cooperative localization (EKF vs UKF)"
license = "MIT"

[dependencies]
nalgebra = { version = "0.34.1", features = ["serde", "rand"] }
rand = "0.8.0"
rand_distr = "0.4.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
plotly = "0.14"
clap = { version = "4.5", features = ["derive"] }